rental section fixed on mobile

--- a/src/app/rental/style/rental.module.css
+++ b/src/app/rental/style/rental.module.css
@@ -29,3 +29,30 @@
   gap: 20px;
   margin-top: 40px;
 }
+
+@media (max-width: 899px) {
+  .sec1 {
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
+  }
+  .cardiscrip {
+    display: none;
+  }
+  .chevdiscrip {
+    display: none;
+  }
+  .sec2 {
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
+  }
+  .suzukidetails {
+    display: none;
+  }
+  .sec3 {
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
+  }
+}
